Added global functions
Added unified global functions for chevron_left, arrow_left, and arrow_right.

--- a/health_app.kv
+++ b/health_app.kv
@@ -180,7 +180,7 @@ WindowManager:
 					font_size:'26sp'
 
 			MDFlatButton:
-				text: 'Learn more'
+				text: '    Reset    '
 				halign: 'center'
 				# size_hint:(1,1)
 				size_hint_y:1
