--- a/health_app.kv
+++ b/health_app.kv
@@ -194,8 +194,8 @@ WindowManager:
 			MDList:
 				id:listt
 				TwoLineIconListItem:
+					id:SocioDemographicPage_label
 					text: 'Demographics'
-					id:demographics_label
 					secondary_text: "0% Complete"
 					secondary_font_style:'Caption'
 					on_release:
@@ -206,7 +206,7 @@ WindowManager:
 
 
 				TwoLineIconListItem:
-					id:location_label
+					id:LocationPage_label
 					text: 'Location'
 					secondary_text: "0% Complete"
 					secondary_font_style:'Caption'
@@ -218,7 +218,7 @@ WindowManager:
 
 
 				TwoLineIconListItem:
-					id:air_pollution_label
+					id:AirPollutionPage_label
 					text: 'Air Pollution'
 					secondary_text: "0% Complete"
 					secondary_font_style:'Caption'
@@ -233,7 +233,7 @@ WindowManager:
 
 
 				TwoLineIconListItem:
-					id:diet_label
+					id:DietAndFoodPage_label
 					text: 'Diet & Food'
 					secondary_text: "0% Complete"
 					secondary_font_style:'Caption'
@@ -246,7 +246,7 @@ WindowManager:
 					#     icon:'food-apple-outline'
 
 				TwoLineIconListItem:
-					id:physical_activity_label
+					id:PhysicalActivityPage_label
 					text: 'Physical Activity'
 					secondary_text: "0% Complete"
 					secondary_font_style:'Caption'
@@ -257,6 +257,7 @@ WindowManager:
 						icon:'arm-flex-outline'
 
 				TwoLineIconListItem:
+					id:AlcoholUsagePage_label
 					text: 'Alcohol Usage'
 					secondary_text: "0% Complete"
 					secondary_font_style:'Caption'
@@ -267,6 +268,7 @@ WindowManager:
 						icon:'glass-cocktail'
 
 				TwoLineIconListItem:
+					id:DepressionPage_label
 					text: 'Depression'
 					secondary_text: "0% Complete"
 					secondary_font_style:'Caption'
@@ -278,6 +280,7 @@ WindowManager:
 
 
 				TwoLineIconListItem:
+					id:HyperTensionPage_label
 					text: 'Hypertension'
 					secondary_text: "0% Complete"
 					secondary_font_style:'Caption'
@@ -290,6 +293,7 @@ WindowManager:
 
 
 				TwoLineIconListItem:
+					id:TraumaticBrainInjuryPage_label
 					text: 'Traumatic Brain Injury'
 					secondary_text: "0% Complete"
 					secondary_font_style:'Caption'
@@ -300,6 +304,7 @@ WindowManager:
 						icon:'brain'
 
 				TwoLineIconListItem:
+					id:CognitiveDeclinePage_label
 					text: 'Cognitive Decline'
 					secondary_text: "0% Complete"
 					secondary_font_style:'Caption'
