completed alcohol score page

--- a/health_app.kv
+++ b/health_app.kv
@@ -96,6 +96,10 @@ WindowManager:
 		id:AlcoholUsagePage
 		name:'AlcoholUsagePage'
 
+	AlcoholScorePage:
+		id:AlcoholScorePage
+		name:'AlcoholScorePage'
+
 	# ------------------------------------- #
 	DepressionPage:
 		id:DepressionPage
