--- a/layout_files/Alcohol.kv
+++ b/layout_files/Alcohol.kv
@@ -115,6 +115,96 @@
 							halign: 'center'
 							size_hint_x:0.9
 
+		MDBoxLayout:
+		    orientation:'vertical'
+		    MDRectangleFlatIconButton:
+		        # id:button7
+		        icon:'numeric-7'
+		        text:'Never'
+		        halign:'left'
+		        size_hint_x:0.8
+		        font_style:'Button'
+		        theme_text_color: "Custom"
+		        color_icon_root_button: app.theme_cls.accent_color
+		        pos_hint:{'center_x':0.5}
+
+		        on_release:
+		            root.button_press(7)
+		    MDLabel:
+		        text:''
+		        size_hint_y:0.05
+		    MDRectangleFlatIconButton:
+		        id:button6
+		        icon:'numeric-6'
+		        text:'Less than monthly'
+		        halign:'left'
+		        size_hint_x:0.8
+		        font_style:'Button'
+		        # size_hint_y:0.8
+		        pos_hint:{'center_x':0.5}
+		        on_release: root.button_press(6)
+		        custom_color: 0, 1, 0, 1
+		    MDLabel:
+		        text:''
+		        size_hint_y:0.05
+		    MDRectangleFlatIconButton:
+		        id:button5
+		        icon:'numeric-5'
+		        text:'Monthly'
+		        halign:'left'
+		        size_hint_x:0.8
+		        font_style:'Button'
+		        # size_hint_y:0.8
+		        pos_hint:{'center_x':0.5}
+		        on_release: root.button_press(5)
+		    MDLabel:
+		        text:''
+		        size_hint_y:0.05
+		    MDRectangleFlatIconButton:
+		        id:button4
+		        icon:'numeric-4'
+		        text:'Weekly'
+		        halign:'left'
+		        size_hint_x:0.8
+		        font_style:'Button'
+		        pos_hint:{'center_x':0.5}
+		        on_release: root.button_press(4)
+		    MDLabel:
+		        text:''
+		        size_hint_y:0.05
+		    MDRectangleFlatIconButton:
+		        id:button3
+		        icon:'numeric-3'
+		        text:'2 - 3 times a week'
+		        halign:'left'
+		        size_hint_x:0.8
+		        font_style:'Button'
+		        pos_hint:{'center_x':0.5}
+		        on_release: root.button_press(3)
+		    MDLabel:
+		        text:''
+		        size_hint_y:0.05
+		    MDRectangleFlatIconButton:
+		        id:button2
+		        icon:'numeric-2'
+		        text:'4 - 6 times a week'
+		        halign:'left'
+		        size_hint_x:0.8
+		        font_style:'Button'
+		        pos_hint:{'center_x':0.5}
+		        on_release: root.button_press(2)
+		    MDLabel:
+		        text:''
+		        size_hint_y:0.05
+		    MDRectangleFlatIconButton:
+		        id:button1
+		        icon:'numeric-1'
+		        text:'Daily'
+		        halign:'left'
+		        size_hint_x:0.8
+		        font_style:'Button'
+		        pos_hint:{'center_x':0.5}
+		        on_release: root.button_press(1)
 
 		BoxLayout:
 			size_hint_y:0.2
@@ -139,3 +229,67 @@
 	        text_color:1,1,1,1
 
 
+
+
+<AlcoholScorePage>:
+    score_label:score_label
+    BoxLayout:
+        orientation: 'vertical'
+        MDToolbar:
+
+            title: diet_toolbar_title
+            left_action_items: [["chevron-left", lambda x: root.chevron_left()]]
+            right_action_items: [["dots-vertical", lambda x:app.show_theme_picker()]]
+            # right_action_items: [["dots-vertical", lambda x: app.callback()], ["clock", lambda x: app.callback_2()]]
+            elevation:8
+
+        MDLabel:
+            text: 'Your score is:'
+            halign: 'center'
+
+        MDLabel:
+            id:score_label
+            text: ''
+            halign: 'center'
+
+        MDRaisedButton:
+            id:restart_button
+            text:'Try Again'
+            font_style:'Button'
+            size_hint_x:0.7
+            pos_hint:{'center_x': 0.5, 'center_y': 0.5}
+            on_release:root.reset_quiz()
+        Widget:
+            size_hint_y:0.05
+        MDRaisedButton:
+            id:next_section
+            text:'Back'
+            font_style:'Button'
+            size_hint_x:0.7
+            pos_hint:{'center_x': 0.5, 'center_y': 0.5}
+            on_release:root.chevron_left()
+        Widget:
+            size_hint_y:0.05
+        MDRaisedButton:
+            id:next_section
+            text:'Next'
+            font_style:'Button'
+            size_hint_x:0.7
+            pos_hint:{'center_x': 0.5, 'center_y': 0.5}
+            on_release:root.arrow_right()
+
+
+        MDLabel:
+            size_hint_y:0.7
+
+
+        BoxLayout:
+            orientation: 'horizontal'
+            MDRaisedButton:
+                text:'                     <                       '
+                size_hint_x:1
+                on_release:root.arrow_left()
+            MDRaisedButton:
+                text:'                     >                       '
+                size_hint_x:1
+                on_release:root.arrow_right()
