added depression score page

--- a/health_app.kv
+++ b/health_app.kv
@@ -108,6 +108,10 @@ WindowManager:
 	DepressionPage:
 		id:DepressionPage
 		name:'DepressionPage'
+		
+	DepressionScorePage:
+		id:DepressionScorePage
+		name:'DepressionScorePage'
 
 	# ------------------------------------- #
 	HyperTensionPage:
