--- a/layout_files/HyperTension.kv
+++ b/layout_files/HyperTension.kv
@@ -40,7 +40,7 @@
                 text:'                     <                       '
                 size_hint_x:1
                 on_release:
-                    root.manager.current='DepressionPage'
+                    root.manager.current='DepressionScorePage'
                     root.manager.transition.direction="right"
             MDRaisedButton:
                 text:'                     >                       '
