--- a/layout_files/DepressionPage.kv
+++ b/layout_files/DepressionPage.kv
@@ -1,6 +1,7 @@
 #:set depression_Q0 'Over the last 2 weeks, how often have you been bothered by the following problems:'
 #:set depression_Q1 'Little interest or pleasure in doing things'
 #:set depression_Q2 'Feeling down, depressed, or hopeless'
+#:set depression_toolbar_title 'Depression'
 
 <DepressionLandingPage>:
     BoxLayout:
@@ -67,7 +68,7 @@
     BoxLayout:
         orientation: 'vertical'
         MDToolbar:
-            title: 'Depression'
+            title: depression_toolbar_title
             left_action_items: [["chevron-left", lambda x: root.chevron_left()]]
             right_action_items: [["dots-vertical", lambda x:app.show_theme_picker()],["help", lambda x: root.tap_target_start()]]
             elevation:8
@@ -183,3 +184,68 @@
             size_hint_x:0.9
             text_color:1,1,1,1
 
+
+
+
+<DepressionScorePage>:
+    score_label:score_label
+    BoxLayout:
+        orientation: 'vertical'
+        MDToolbar:
+
+            title: depression_toolbar_title
+            left_action_items: [["chevron-left", lambda x: root.chevron_left()]]
+            right_action_items: [["dots-vertical", lambda x:app.show_theme_picker()]]
+            # right_action_items: [["dots-vertical", lambda x: app.callback()], ["clock", lambda x: app.callback_2()]]
+            elevation:8
+
+        MDLabel:
+            text: 'Your score is:'
+            halign: 'center'
+
+        MDLabel:
+            id:score_label
+            text: ''
+            halign: 'center'
+
+        MDRaisedButton:
+            id:restart_button
+            text:'Try Again'
+            font_style:'Button'
+            size_hint_x:0.7
+            pos_hint:{'center_x': 0.5, 'center_y': 0.5}
+            on_release:root.reset_quiz()
+        Widget:
+            size_hint_y:0.05
+        MDRaisedButton:
+            id:next_section
+            text:'Back'
+            font_style:'Button'
+            size_hint_x:0.7
+            pos_hint:{'center_x': 0.5, 'center_y': 0.5}
+            on_release:root.chevron_left()
+        Widget:
+            size_hint_y:0.05
+        MDRaisedButton:
+            id:next_section
+            text:'Next'
+            font_style:'Button'
+            size_hint_x:0.7
+            pos_hint:{'center_x': 0.5, 'center_y': 0.5}
+            on_release:root.arrow_right()
+
+
+        MDLabel:
+            size_hint_y:0.7
+
+
+        BoxLayout:
+            orientation: 'horizontal'
+            MDRaisedButton:
+                text:'                     <                       '
+                size_hint_x:1
+                on_release:root.arrow_left()
+            MDRaisedButton:
+                text:'                     >                       '
+                size_hint_x:1
+                on_release:root.arrow_right()
